<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorOrange"
    tools:context="com.example.willd.acmeflooringandtilingcompany.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/room_with_checkered_floor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHowManyFloorTilesRequired"
        app:srcCompat="@drawable/tile_floor" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="297dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/btnBrownBackground"
        android:onClick="calculate"
        android:text="@string/calculate_the_number_of_floor_tiles_required"
        android:textColor="@color/btnTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbLengthOfOneFloorTile" />

    <TextView
        android:id="@+id/lblRoomLength"
        android:layout_width="297dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/room_length"
        android:textColor="@color/btnBrownBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tbRoomLength"
        android:layout_width="297dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/btnTextColor"
        android:ems="10"
        android:hint="@string/specify_inches"
        android:inputType="textPersonName"
        android:textColor="@color/btnBrownBackground"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRoomLength" />

    <TextView
        android:id="@+id/lblRoomWidth"
        android:layout_width="297dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/room_width"
        android:textColor="@color/btnBrownBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbRoomLength" />

    <EditText
        android:id="@+id/tbRoomWidth"
        android:layout_width="297dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/btnTextColor"
        android:ems="10"
        android:hint="@string/specify_inches"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRoomWidth" />

    <TextView
        android:id="@+id/lblLengthOfOneFloorTitle"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/length_of_one_floor_tile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbRoomWidth" />

    <EditText
        android:id="@+id/tbLengthOfOneFloorTile"
        android:layout_width="297dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/btnTextColor"
        android:ems="10"
        android:hint="@string/specify_inches"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblLengthOfOneFloorTitle" />

    <TextView
        android:id="@+id/lblHowManyFloorTilesRequired"
        android:layout_width="194dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_many_floor_files_required"
        android:textColor="@color/btnBrownBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

    <Button
        android:id="@+id/btn5percent"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/btnTextColor"
        android:onClick="calcFive"
        android:text="@string/with_5_waste"
        android:textColor="@color/btnBrownBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHowManyFloorTilesRequired" />

    <Button
        android:id="@+id/btn10percent"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/btnTextColor"
        android:onClick="calcTen"
        android:text="@string/with_10_waste"
        android:textColor="@color/btnBrownBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5percent" />

    <TextView
        android:id="@+id/lblAnswer"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblHowManyFloorTilesRequired"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />
</android.support.constraint.ConstraintLayout>
